--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy: 
-     matrix:
-      node-version: [12.x, 14.x, 16.x, 18.x]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -18,7 +14,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{matrix.node-version}}
+          node-version: '12'
 
       - name: Install dependencies
         run: npm install
