--- a/.github/workflows/scheduled-tasks.yml
+++ b/.github/workflows/scheduled-tasks.yml
@@ -37,7 +37,7 @@ jobs:
         run: cp -r /src/* backup/
 
       - name: Commit backup to repository
-        run: echo "
+        run: |
           git config --local user.email "maleeha139@gmail.com"
           git config --local user.name "MaleehaYounas"
           git add .
