--- a/.github/workflows/scheduled-tasks.yml
+++ b/.github/workflows/scheduled-tasks.yml
@@ -29,18 +29,21 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Backup
+        run: echo "Backup code"
      
-      - name: Create backup directory
-        run: mkdir -p backup
+      #- name: Create backup directory
+      #  run: mkdir -p backup
 
-      - name: Copy files to backup directory
-        run: cp -r /src/* backup/
+      #- name: Copy files to backup directory
+      #  run: cp -r /src/* backup/
 
-      - name: Commit backup to repository
-        run: |
-          git config --local user.email "maleeha139@gmail.com"
-          git config --local user.name "MaleehaYounas"
-          git add .
-          git commit -m "Backup at $(date +"%Y-%m-%d")"
-          git push
+      #- name: Commit backup to repository
+      #  run: |
+      #    git config --local user.email "maleeha139@gmail.com"
+      #    git config --local user.name "MaleehaYounas"
+      #    git add .
+      #    git commit -m "Backup at $(date +"%Y-%m-%d")"
+      #    git push
 
