--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -1,11 +1,12 @@
-name: Continuous Integration
+name: Code Review 
 
 on:
   push:
     branches: ["main"]
 
+
 jobs:
-  build:
+  code_review:
     runs-on: ubuntu-latest
 
     strategy: 
@@ -23,12 +24,16 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Lint code
-        run: echo "Running lint code"
-        #run: npm run lint
 
-      - name: Run Tests
-        #run: npm tests
-        run: echo "Running tests"
+      - name: Check Coding Standards
+        #run: npm run lint  
+        run: echo "Running Lint"
 
-      
+      - name: Analyze Code Quality
+        #run: npm run analyze  
+         run: echo "Analyzing code quailty"
+
+
+      - name: Scan for Security Vulnerabilities
+        #run: npm run security-scan  
+        run: echo "Scanning Security Vulnerabilities"
