--- a/.github/workflows/dependencies-updates.yml
+++ b/.github/workflows/dependencies-updates.yml
@@ -24,5 +24,6 @@ jobs:
         run: npm install
 
       - name: Update dependencies
-        run: npm update
+        #run: npm update
+        run: echo "Updating dependencies"
 
